add reorder and remove zekrs option

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,7 @@
 <resources>
-    <string name="app_name">ZekrShomar</string>
+    <string name="app_name">ذکر شمار</string>
 
     <string name="action_settings">تنظیمات</string>
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="navView_tools">ابزار ها</string>
     <string name="navView_zekrs">ذکر ها</string>
