--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ذکر شمار</string>
+    <string name="app_name">ذکر شمار و معکوس شمار</string>
 
     <string name="action_settings">تنظیمات</string>
 
